[package]
name = "scd30"
version = "0.2.1"
authors = ["Vincent Stakenburg <vincentstakenburg@gmail.com>"]
repository = "https://github.com/sinuss/scd30-rs"
description = "A SCD30 driver crate"
categories = ["no-std", "embedded"]
license = "MIT"
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"
heapless = "0.4.2"
